src/photo.h

    // see : https://docs.opencv.org/3.4/d7/dd6/classcv_1_1MergeMertens.html
    typedef cv::Ptr<cv::MergeMertens> *MergeMertens;
typedef void *MergeMertens;
    void IlluminationChange(Mat src, Mat mask, Mat dst, float alpha, float beta);
    void FastNlMeansDenoisingWithParams(Mat src, Mat dst, float h, int templateWindowSize, int searchWindowSize);
    void FastNlMeansDenoisingColoredWithParams(Mat src, Mat dst, float h, float hColor, int templateWindowSize, int searchWindowSize);
    MergeMertens MergeMertens_Create();
    MergeMertens MergeMertens_CreateWithParams(float contrast_weight, float saturation_weight, float exposure_weight);
    void MergeMertens_Process(MergeMertens b, struct Mats src, Mat dst);
    void MergeMertens_Close(MergeMertens b);
    void PencilSketch(Mat src, Mat dst1, Mat dst2, float sigma_s, float sigma_r, float shade_factor);