packages/dartcv/lib/src/g/photo.g.dart


  late final _FastNlMeansDenoisingColoredMultiWithParams_AsyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(VecMat, ffi.Int, ffi.Int,
                  ffi.Float, ffi.Float, ffi.Int, ffi.Int, imp1.CvCallback_1)>>(
      'FastNlMeansDenoisingColoredMultiWithParams_Async');
  late final _FastNlMeansDenoisingColoredMultiWithParams_Async =
      _FastNlMeansDenoisingColoredMultiWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat, int, int, double, double, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingColoredMulti_Async(
    VecMat src,
    int imgToDenoiseIndex,
    int temporalWindowSize,
    imp1.CvCallback_1 callback,
  ) {
    return _FastNlMeansDenoisingColoredMulti_Async(
      src,
      imgToDenoiseIndex,
      temporalWindowSize,
      callback,
    );
  }

  late final _FastNlMeansDenoisingColoredMulti_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(VecMat, ffi.Int, ffi.Int,
              imp1.CvCallback_1)>>('FastNlMeansDenoisingColoredMulti_Async');
  late final _FastNlMeansDenoisingColoredMulti_Async =
      _FastNlMeansDenoisingColoredMulti_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              VecMat, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingColoredWithParams(
    Mat src,
    Mat dst,
    double h,
    double hColor,
    int templateWindowSize,
    int searchWindowSize,
  ) {
    return _FastNlMeansDenoisingColoredWithParams(
      src,
      dst,
      h,
      hColor,
      templateWindowSize,
      searchWindowSize,
    );
  }

  late final _FastNlMeansDenoisingColoredWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Float, ffi.Float,
              ffi.Int, ffi.Int)>>('FastNlMeansDenoisingColoredWithParams');
  late final _FastNlMeansDenoisingColoredWithParams =
      _FastNlMeansDenoisingColoredWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, double, double, int, int)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingColoredWithParams_Async(
    Mat src,
    double h,
    double hColor,
    int templateWindowSize,
    int searchWindowSize,
    imp1.CvCallback_1 callback,
  ) {
    return _FastNlMeansDenoisingColoredWithParams_Async(
      src,
      h,
      hColor,
      templateWindowSize,
      searchWindowSize,
      callback,
    );
  }

  late final _FastNlMeansDenoisingColoredWithParams_AsyncPtr = _lookup<
          ffi.NativeFunction<
              ffi.Pointer<CvStatus> Function(Mat, ffi.Float, ffi.Float, ffi.Int,
                  ffi.Int, imp1.CvCallback_1)>>(
      'FastNlMeansDenoisingColoredWithParams_Async');
  late final _FastNlMeansDenoisingColoredWithParams_Async =
      _FastNlMeansDenoisingColoredWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, double, double, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingColored_Async(
    Mat src,
    imp1.CvCallback_1 callback,
  ) {
    return _FastNlMeansDenoisingColored_Async(
      src,
      callback,
    );
  }

  late final _FastNlMeansDenoisingColored_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, imp1.CvCallback_1)>>('FastNlMeansDenoisingColored_Async');
  late final _FastNlMeansDenoisingColored_Async =
      _FastNlMeansDenoisingColored_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingWithParams(
    Mat src,
    Mat dst,
    double h,
    int templateWindowSize,
    int searchWindowSize,
  ) {
    return _FastNlMeansDenoisingWithParams(
      src,
      dst,
      h,
      templateWindowSize,
      searchWindowSize,
    );
  }

  late final _FastNlMeansDenoisingWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Float, ffi.Int,
              ffi.Int)>>('FastNlMeansDenoisingWithParams');
  late final _FastNlMeansDenoisingWithParams =
      _FastNlMeansDenoisingWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, double, int, int)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoisingWithParams_Async(
    Mat src,
    double h,
    int templateWindowSize,
    int searchWindowSize,
    imp1.CvCallback_1 callback,
  ) {
    return _FastNlMeansDenoisingWithParams_Async(
      src,
      h,
      templateWindowSize,
      searchWindowSize,
      callback,
    );
  }

  late final _FastNlMeansDenoisingWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, ffi.Float, ffi.Int, ffi.Int,
              imp1.CvCallback_1)>>('FastNlMeansDenoisingWithParams_Async');
  late final _FastNlMeansDenoisingWithParams_Async =
      _FastNlMeansDenoisingWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, double, int, int, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> FastNlMeansDenoising_Async(
    Mat src,
    imp1.CvCallback_1 callback,
  ) {
    return _FastNlMeansDenoising_Async(
      src,
      callback,
    );
  }

  late final _FastNlMeansDenoising_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, imp1.CvCallback_1)>>('FastNlMeansDenoising_Async');
  late final _FastNlMeansDenoising_Async = _FastNlMeansDenoising_AsyncPtr
      .asFunction<ffi.Pointer<CvStatus> Function(Mat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> IlluminationChange(
    Mat src,
    Mat mask,
    Mat dst,
    double alpha,
    double beta,
  ) {
    return _IlluminationChange(
      src,
      mask,
      dst,
      alpha,
      beta,
    );
  }

  late final _IlluminationChangePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Float, ffi.Float)>>('IlluminationChange');
  late final _IlluminationChange = _IlluminationChangePtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, double, double)>();

  ffi.Pointer<CvStatus> IlluminationChange_Async(
    Mat src,
    Mat mask,
    double alpha,
    double beta,
    imp1.CvCallback_1 callback,
  ) {
    return _IlluminationChange_Async(
      src,
      mask,
      alpha,
      beta,
      callback,
    );
  }

  late final _IlluminationChange_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(Mat, Mat, ffi.Float, ffi.Float,
              imp1.CvCallback_1)>>('IlluminationChange_Async');
  late final _IlluminationChange_Async =
      _IlluminationChange_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, double, double, imp1.CvCallback_1)>();

  void MergeMertens_Close(
    MergeMertensPtr b,
  ) {
    return _MergeMertens_Close(
      b,
    );
  }

  late final _MergeMertens_ClosePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(MergeMertensPtr)>>(
          'MergeMertens_Close');
  late final _MergeMertens_Close =
      _MergeMertens_ClosePtr.asFunction<void Function(MergeMertensPtr)>();

  ffi.Pointer<CvStatus> MergeMertens_Create(
    ffi.Pointer<MergeMertens> rval,
  ) {
    return _MergeMertens_Create(
      rval,
    );
  }

  late final _MergeMertens_CreatePtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              ffi.Pointer<MergeMertens>)>>('MergeMertens_Create');
  late final _MergeMertens_Create = _MergeMertens_CreatePtr.asFunction<
      ffi.Pointer<CvStatus> Function(ffi.Pointer<MergeMertens>)>();

  ffi.Pointer<CvStatus> MergeMertens_CreateWithParams(
    double contrast_weight,
    double saturation_weight,
    double exposure_weight,
    ffi.Pointer<MergeMertens> rval,
  ) {
    return _MergeMertens_CreateWithParams(
      contrast_weight,
      saturation_weight,
      exposure_weight,
      rval,
    );
  }

  late final _MergeMertens_CreateWithParamsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Float, ffi.Float, ffi.Float,
              ffi.Pointer<MergeMertens>)>>('MergeMertens_CreateWithParams');
  late final _MergeMertens_CreateWithParams =
      _MergeMertens_CreateWithParamsPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              double, double, double, ffi.Pointer<MergeMertens>)>();

  ffi.Pointer<CvStatus> MergeMertens_CreateWithParams_Async(
    double contrast_weight,
    double saturation_weight,
    double exposure_weight,
    imp1.CvCallback_1 callback,
  ) {
    return _MergeMertens_CreateWithParams_Async(
      contrast_weight,
      saturation_weight,
      exposure_weight,
      callback,
    );
  }

  late final _MergeMertens_CreateWithParams_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(ffi.Float, ffi.Float, ffi.Float,
              imp1.CvCallback_1)>>('MergeMertens_CreateWithParams_Async');
  late final _MergeMertens_CreateWithParams_Async =
      _MergeMertens_CreateWithParams_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              double, double, double, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> MergeMertens_Create_Async(
    imp1.CvCallback_1 callback,
  ) {
    return _MergeMertens_Create_Async(
      callback,
    );
  }

  late final _MergeMertens_Create_AsyncPtr = _lookup<
          ffi
          .NativeFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>>(
      'MergeMertens_Create_Async');
  late final _MergeMertens_Create_Async = _MergeMertens_Create_AsyncPtr
      .asFunction<ffi.Pointer<CvStatus> Function(imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> MergeMertens_Process(
    MergeMertens b,
    VecMat src,
    Mat dst,
  ) {
    return _MergeMertens_Process(
      b,
      src,
      dst,
    );
  }

  late final _MergeMertens_ProcessPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              MergeMertens, VecMat, Mat)>>('MergeMertens_Process');
  late final _MergeMertens_Process = _MergeMertens_ProcessPtr.asFunction<
      ffi.Pointer<CvStatus> Function(MergeMertens, VecMat, Mat)>();

  ffi.Pointer<CvStatus> MergeMertens_Process_Async(
    MergeMertens b,
    VecMat src,
    imp1.CvCallback_1 callback,
  ) {
    return _MergeMertens_Process_Async(
      b,
      src,
      callback,
    );
  }

  late final _MergeMertens_Process_AsyncPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(MergeMertens, VecMat,
              imp1.CvCallback_1)>>('MergeMertens_Process_Async');
  late final _MergeMertens_Process_Async =
      _MergeMertens_Process_AsyncPtr.asFunction<
          ffi.Pointer<CvStatus> Function(
              MergeMertens, VecMat, imp1.CvCallback_1)>();

  ffi.Pointer<CvStatus> PencilSketch(
    Mat src,
    Mat dst1,
    Mat dst2,
    double sigma_s,
    double sigma_r,
    double shade_factor,
  ) {
    return _PencilSketch(
      src,
      dst1,
      dst2,
      sigma_s,
      sigma_r,
      shade_factor,
    );
  }

  late final _PencilSketchPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<CvStatus> Function(
              Mat, Mat, Mat, ffi.Float, ffi.Float, ffi.Float)>>('PencilSketch');
  late final _PencilSketch = _PencilSketchPtr.asFunction<
      ffi.Pointer<CvStatus> Function(Mat, Mat, Mat, double, double, double)>();

  ffi.Pointer<CvStatus> PencilSketch_Async(
    Mat src,
    double sigma_s,
    double sigma_r,
    double shade_factor,
    imp1.CvCallback_2 callback,
  ) {
    return _PencilSketch_Async(
      src,
      sigma_s,
      sigma_r,
      shade_factor,
      callback,
    );
  }
